--- a/docs/scss/_global.scss
+++ b/docs/scss/_global.scss
@@ -11,3 +11,7 @@
     }
   }
 }
+
+.mg-b {
+  margin-bottom: 150px !important;
+}
