--- a/docs/scss/pages/_index.scss
+++ b/docs/scss/pages/_index.scss
@@ -49,7 +49,6 @@
 .what {
   text-align: center;
   padding: 30px 30px 100px 30px;
-  margin-bottom: 70px;
 }
 
 .li-feats {
